--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -53,6 +53,10 @@ h5 {
 	font-size: 24px;
 	font-family: "Lora", serif;
 }
+h6{
+	color: $cinza-escuro;
+	font-size: 16px;
+}
 p {
 	color: $cinza-escuro;
 	font-size: 20px;
@@ -73,6 +77,16 @@ p {
 		background-color: #E0C6B9;
 		transition: all .2s;
 		text-decoration: none;
+	}
+}
+.topico-lista{
+	display: flex;
+	align-items: center;
+	margin-bottom: 15px;
+	font-weight: 600;
+	color: $preto;
+	img{
+		margin-right: 10px;
 	}
 }
 .align {
@@ -344,7 +358,7 @@ footer {
 			.info {
 				width: 30%;
 				.crp {
-					margin: 30px 0 10px 0;
+					margin: 10px 0 20px 0;
 				}
 			}
 			.sigame {
@@ -613,18 +627,6 @@ footer {
 				.topicos{
 					margin: 20px 0 35px 0;
 					display: flex;
-					div{
-						p{
-							display: flex;
-    						align-items: center;
-							margin-bottom: 15px;
-							font-weight: 600;
-							color: $preto;
-							img{
-								margin-right: 10px;
-							}
-						}
-					}
 					.primeira-coluna{
 						margin-right: 80px;
 					}
@@ -636,8 +638,134 @@ footer {
 				top: -50px;
 			}
 			&:nth-child(2){
-				margin-top: 100px;
-				margin-bottom: 100px;
+				margin-top: 140px;
+				margin-bottom: 140px;
+				flex-direction: row-reverse;
+				margin-left: 0;
+				margin-right: 145px;
+				padding-left: 145px;
+				border-radius: 0 16px 16px 0;
+				.box-descritivo{
+					padding: 40px 150px 40px 70px;
+				}
+				.foto{
+					display: flex;
+    				justify-content: flex-end;
+				}
+			}
+		}
+	}
+	.terapia-online{
+		background-color: $rosa;
+		margin: 100px 0;
+		.agrupador{
+			padding: 120px 0;
+			.topicos{
+				margin-right: 80px;
+				width: 30%;
+				.box{
+					display: flex;
+					align-items: center;
+					background-color: #fff;
+					border-radius: 16px 16px 16px 55px;
+					padding: 20px 40px;
+					span{
+						margin-left: 40px;
+						h5{
+							color: $preto;
+							font-weight: 600;
+							margin-bottom: 15px;
+						}
+					}
+				}
+				.box2{
+					margin: 50px 0;
+					position: relative;
+    				left: -75px;
+				}
+			}
+			.box-descritivo{
+				width: 35%;
+				h2{
+					margin-bottom: 40px;
+				}	
+				.beneficios{
+					margin-top: 60px;
+					p{
+						color: $preto;
+						display: flex;
+						align-items: center;
+						font-weight: 600;
+						margin-bottom: 25px;
+					}
+				}
+			}
+		}
+	}
+	.cafe{
+		h2{
+			margin-bottom: 80px;
+			&:before {
+				content: "";
+				background: $rosa-escuro;
+				display: block;
+				border-radius: 50%;
+				width: 16px;
+				height: 16px;
+				margin-right: 20px;
+			}
+			&:after {
+				content: "";
+				background: $rosa-escuro;
+				display: block;
+				border-radius: 50%;
+				width: 16px;
+				height: 16px;
+				margin-left: 20px;
+			}
+		}
+		article{
+			display: flex;
+   			align-items: flex-start;
+			justify-content: space-between;
+			margin: 0 140px;
+			.box{
+				width: 30%;
+				border: 1px solid #D9D9D9;
+				border-radius: 16px;
+				overflow: hidden;
+				.foto{
+					overflow: hidden;
+					img{
+						transition: all .3s;
+					}
+				}
+				&:hover{
+					text-decoration: none;
+					.foto{
+						overflow: hidden;
+						img{
+							scale: 1.1;
+							transition: all .3s;
+						}
+					}
+				}
+				.agrupador{
+					padding: 15px 30px 40px 30px;
+					.data{
+						font-size: 16px;
+						color: #A9A9A9;
+					}
+					h5{
+						color: $preto;
+						font-weight: 600;
+						margin: 15px 0;
+					}
+					span{
+						cursor: pointer;
+						margin-top: 20px;
+					}
+				}
 			}
 		}
 	}
