--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -40,11 +40,20 @@ h2 {
 	@media only screen and (max-width: 1265px) {
 		font-size: 48px;
 	}
+	@media only screen and (max-width: 600px) {
+		font-size: 32px;
+	}
 }
 h3 {
 	color: $preto;
 	font-size: 48px;
 	font-weight: 700;
+	@media only screen and (max-width: 1265px) {
+		font-size: 32px;
+	}
+	@media only screen and (max-width: 600px) {
+		font-size: 24px;
+	}
 }
 h4 {
 	color: $preto;
@@ -58,6 +67,9 @@ h5 {
 	@media only screen and (max-width: 1265px) {
 		font-size: 20px;
 	}
+	@media only screen and (max-width: 600px) {
+		font-size: 16px;
+	}
 }
 h6 {
 	color: $cinza-escuro;
@@ -68,6 +80,9 @@ p {
 	font-size: 20px;
 	@media only screen and (max-width: 1265px) {
 		font-size: 18px;
+	}
+	@media only screen and (max-width: 600px) {
+		font-size: 16px;
 	}
 }
 .botao {
@@ -536,6 +551,128 @@ footer {
 		}
 	}
 }
+.sobre-desktop {
+	margin: 8% 10%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	z-index: 1;
+    position: relative;
+	.imagem {
+		width: 40%;
+		img {
+			border-radius: 12px;
+		}
+		.swiper-pagination {
+			padding: 10px 0;
+			position: relative;
+			bottom: 0;
+			.swiper-pagination-bullet {
+				background-color: #e14d00;
+				width: 10px;
+				height: 10px;
+			}
+			.swiper-pagination-bullet-active {
+				background-color: $rosa-escuro;
+			}
+		}
+	}
+	aside {
+		width: 50%;
+		h5 {
+			margin: 5px 0 35px 0;
+		}
+		p{
+			text-align: justify;
+		}
+		div {
+			margin: 50px 0 40px 0;
+			.whatsapp {
+				margin-left: 15px;
+			}
+			svg {
+				path {
+					transition: all 0.2s;
+				}
+			}
+			a {
+				&:hover {
+					text-decoration: none;
+					transition: all 0.2s;
+					path {
+						fill: $rosa-escuro;
+					}
+				}
+			}
+		}
+	}
+	@media only screen and (max-width: 1265px) {
+		margin: 8% 4%;
+		align-items: flex-start;
+		aside {
+			h2 {
+				margin-top: 20px;
+			}
+			h5 {
+				margin: 10px 0 20px 0;
+			}
+			div {
+				margin: 35px 0 25px 0;
+			}
+		}
+	}
+}
+.sobre-mobile {
+	display: none;
+	margin: 8% 10%;
+	flex-direction: column;
+	text-align: center;
+	z-index: 1;
+    position: relative;
+	h5 {
+		margin: 12px 0 25px 0;
+	}
+	.imagem {
+		img {
+			border-radius: 12px;
+		}
+		.swiper-pagination {
+			padding: 5px 0 10px 0;
+			position: relative;
+			bottom: 0;
+			.swiper-pagination-bullet {
+				background-color: #e14d00;
+				width: 10px;
+				height: 10px;
+			}
+			.swiper-pagination-bullet-active {
+				background-color: $rosa-escuro;
+			}
+		}
+	}
+	aside {
+		p {
+			text-align: justify;
+		}
+		div {
+			margin: 15px 0;
+			.whatsapp {
+				margin-left: 20px;
+			}
+		}
+		a {
+			margin: 0 auto;
+		}
+	}
+}
+@media only screen and (max-width: 990px) {
+	.sobre-desktop {
+		display: none;
+	}
+	.sobre-mobile {
+		display: flex;
+	}
+}
 .home {
 	.banner {
 		.swiper-container {
@@ -547,7 +684,7 @@ footer {
 						transform: translateY(-50%);
 						width: 40%;
 						margin-left: 140px;
-						z-index: 1;
+						z-index: 10;
 						h2 {
 							font-family: "Raleway", sans-serif;
 							font-weight: 700;
@@ -556,6 +693,14 @@ footer {
 							font-family: "Raleway", sans-serif;
 							margin: 40px 0 50px 0;
 						}
+					}
+					.foto-banner:before{
+						content: '';
+						background-image: linear-gradient(to right, #fff, #ffffffe3, #ffffff96, #ffffff00, #00000000);
+						z-index: 9;
+						position: absolute;
+						width: 100%;
+						height: 100%;
 					}
 					@media only screen and (max-width: 1265px) {
 						.box-descritivo {
@@ -573,134 +718,51 @@ footer {
 							width: 50%;
 						}
 					}
-				}
-			}
-			.swiper-pagination {
-				padding: 10px 0;
-				position: relative;
-				bottom: 0;
-				.swiper-pagination-bullet {
-					background-color: #e14d00;
-					width: 10px;
-					height: 10px;
-				}
-				.swiper-pagination-bullet-active {
-					background-color: $rosa-escuro;
-				}
-			}
-		}
-	}
-	.sobre-desktop {
-		margin: 8% 10%;
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		.imagem {
-			width: 40%;
-			img {
-				border-radius: 12px;
-			}
-			.swiper-pagination {
-				padding: 10px 0;
-				position: relative;
-				bottom: 0;
-				.swiper-pagination-bullet {
-					background-color: #e14d00;
-					width: 10px;
-					height: 10px;
-				}
-				.swiper-pagination-bullet-active {
-					background-color: $rosa-escuro;
-				}
-			}
-		}
-		aside {
-			width: 50%;
-			h5 {
-				margin: 5px 0 35px 0;
-			}
-			div {
-				margin: 50px 0 40px 0;
-				.whatsapp {
-					margin-left: 15px;
-				}
-				svg {
-					path {
-						transition: all 0.2s;
+					@media only screen and (max-width: 770px) {
+						.box-descritivo{
+							margin-left: 15px;
+							h2{
+								font-size: 32px;
+								margin-bottom: 15px;
+							}
+							h5{
+								display: none;
+							}
+							.botao{
+								padding: 8px 15px;
+								p{
+									font-size: 16px;
+								}
+							}
+						}
 					}
-				}
-				a {
-					&:hover {
-						text-decoration: none;
-						transition: all 0.2s;
-						path {
-							fill: $rosa-escuro;
+					@media only screen and (max-width: 420px) {
+						.box-descritivo{
+							margin-left: 15px;
+							h2{
+								font-size: 32px;
+							}
+							.botao{
+								padding: 8px 15px;
+								p{
+									font-size: 16px;
+								}
+							}
 						}
 					}
 				}
 			}
-		}
-		@media only screen and (max-width: 1265px) {
-			margin: 8% 4%;
-			align-items: flex-start;
-			aside {
-				h2 {
-					margin-top: 20px;
+			.swiper-pagination {
+				padding: 10px 0;
+				position: relative;
+				bottom: 0;
+				.swiper-pagination-bullet {
+					background-color: #e14d00;
+					width: 10px;
+					height: 10px;
 				}
-				h5 {
-					margin: 10px 0 20px 0;
-				}
-				div {
-					margin: 35px 0 25px 0;
-				}
-			}
-		}
-	}
-	.sobre-mobile {
-		display: none;
-	}
-	@media only screen and (max-width: 990px) {
-		.sobre-desktop {
-			display: none;
-		}
-		.sobre-mobile {
-			margin: 8% 10%;
-			display: flex;
-			flex-direction: column;
-			text-align: center;
-			h5 {
-				margin: 12px 0 25px 0;
-			}
-			.imagem {
-				img {
-					border-radius: 12px;
-				}
-				.swiper-pagination {
-					padding: 5px 0 10px 0;
-					position: relative;
-					bottom: 0;
-					.swiper-pagination-bullet {
-						background-color: #e14d00;
-						width: 10px;
-						height: 10px;
-					}
-					.swiper-pagination-bullet-active {
-						background-color: $rosa-escuro;
-					}
-				}
-			}
-			aside {
-				p {
-					text-align: justify;
-				}
-				div{
-					margin: 15px 0;
-					.whatsapp{
-						margin-left: 20px;
-					}
-				}
-				a {
-					margin: 0 auto;
+				.swiper-pagination-bullet-active {
+					background-color: $rosa-escuro;
 				}
 			}
 		}
@@ -753,14 +815,58 @@ footer {
 			}
 			@media only screen and (max-width: 1500px) {
 				margin-left: 4%;
-				.box-descritivo{
+				.box-descritivo {
 					padding: 40px 70px;
 				}
 				&:nth-child(2) {
 					margin-right: 4%;
-					.box-descritivo{
+					.box-descritivo {
 						padding: 40px 70px;
 					}
+				}
+			}
+			@media only screen and (max-width: 1150px) {
+				align-items: center;
+				.foto {
+					top: 0px;
+				}
+			}
+			@media only screen and (max-width: 990px) {
+				.foto {
+					display: none;
+				}
+				.box-descritivo {
+					text-align: center;
+					p {
+						text-align: justify;
+					}
+					div {
+						p {
+							text-align: start;
+						}
+					}
+					.botao {
+						margin: 0 auto;
+					}
+				}
+				&:nth-child(2) {
+					margin-top: 50px;
+					margin-bottom: 50px;
+				}
+			}
+			@media only screen and (max-width: 600px) {
+				.box-descritivo {
+					padding: 40px;
+				}
+				&:nth-child(2) {
+					.box-descritivo {
+						padding: 40px;
+					}
+				}
+			}
+			@media only screen and (max-width: 530px) {
+				.topicos {
+					flex-direction: column;
 				}
 			}
 		}
@@ -807,6 +913,55 @@ footer {
 						align-items: center;
 						font-weight: 600;
 						margin-bottom: 25px;
+					}
+				}
+			}
+			@media only screen and (max-width: 1200px) {
+				margin-left: 25px;
+				.topicos,
+				.box-descritivo {
+					width: 40%;
+				}
+			}
+			@media only screen and (max-width: 900px) {
+				flex-direction: column-reverse;
+				margin: 0 40px;
+				.topicos {
+					width: 100%;
+					margin: 30px 0 0 0;
+					.box {
+						margin: 0;
+						width: fit-content;
+					}
+					.box2 {
+						float: right;
+						left: 0;
+						margin: 30px 0;
+					}
+				}
+				.box-descritivo {
+					width: 100%;
+					div {
+						display: flex;
+						flex-wrap: wrap;
+						p {
+							width: 50%;
+						}
+					}
+				}
+			}
+			@media only screen and (max-width: 600px) {
+				.topicos {
+					.box {
+						padding: 15px 22px;
+						img {
+							max-width: 20%;
+						}
+					}
+				}
+				.box-descritivo {
+					.beneficios {
+						margin-top: 20px;
 					}
 				}
 			}
@@ -877,6 +1032,64 @@ footer {
 					}
 				}
 			}
+			@media only screen and (max-width: 1200px) {
+				.box {
+					width: 45%;
+					&:nth-child(3) {
+						display: none;
+					}
+				}
+			}
+			@media only screen and (max-width: 820px) {
+				.box {
+					width: 100%;
+					.foto {
+						img {
+							width: 100%;
+						}
+					}
+					&:nth-child(2) {
+						display: none;
+					}
+				}
+			}
+			@media only screen and (max-width: 600px) {
+				margin: 0 40px;
+			}
+		}
+	}
+}
+.sobre{
+	.titulo{
+		position: absolute;
+		right: 50%;
+		transform: translateX(50%);
+		font-size: 250px;
+		font-weight: 500;
+		font-family: "Lora", serif;
+		color: $cinza;
+		@media only screen and (max-width: 720px) {
+			font-size: 110px;
+		}
+	}
+	.sobre-desktop{
+		margin: 8% 10% 4% 10%;
+	}
+	.sobre-mobile{
+		.imagem{
+			margin-bottom: 20px;
+			img{
+				margin: 0 auto;
+			}
+		}
+	}
+	.blocos{
+		display: flex;
+		justify-content: space-between;
+		margin: 0% 12%;
+		p{
+			width: 30%;
+			text-align: justify;
 		}
 	}
 }
