--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -1240,9 +1240,80 @@ footer {
 	}
 }
 .interna-blog {
-	section{
+	margin: 0 8%;
+	display: flex;
+	justify-content: space-between;
+	article{
+		margin-top: 80px;
+		width: 65%;
+		h1{
+			font-size: 48px;
+			font-weight: 600;
+			font-family: "Lora", serif;
+		}
 		.social{
-			
+			display: flex;
+			justify-content: space-between;
+			align-items: flex-start;
+			margin: 25px 0 10px 0;
+			p{
+				svg{
+					margin-right: 5px;
+				}
+			}
+		}
+		img{
+			border-radius: 6px;
+			max-width: 100%;
+		}
+		.conteudo{
+			margin: 30px 0 50px 0;
+			p{
+				text-align: justify;
+			}
+		}
+	}
+	aside{
+		width: 25%;
+		margin-top: 80px;
+		display: flex;
+		flex-direction: column;
+		h4{
+			margin-bottom: 40px;
+			font-weight: 700;
+		}
+		form{
+			padding: 0;
+    		margin: 0;
+			.form-group{
+				width: 75%;
+				input{
+					height: 55px;
+					width: 100%;
+					font-size: 18px;
+					border-radius: 6px;
+					padding: 5px 10px;
+				}
+			}
+		}
+		.post-recentes{
+			border-top: 1px solid #eeeeee;
+			border-bottom: 1px solid #eeeeee;
+			padding: 50px 0;
+			margin: 50px 0;
+			div{
+				a{
+					text-decoration: none;
+					h5{
+						color: $preto;
+						font-size: 20px;
+						font-weight: 500;
+					}
+				}
+				&:nth-child(3){
+					margin: 30px 0;
+				}
+			}
 		}
 	}
 }
