--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -162,7 +162,7 @@ header {
 				align-items: center;
 				&:before {
 					content: "";
-					background: $rosa;
+					background: $rosa-escuro;
 					display: block;
 					border-radius: 50%;
 					width: 6px;
@@ -1254,11 +1254,50 @@ footer {
 		.social{
 			display: flex;
 			justify-content: space-between;
-			align-items: flex-start;
-			margin: 25px 0 10px 0;
+			align-items: center;
+			overflow: hidden;
 			p{
 				svg{
 					margin-right: 5px;
+				}
+			}
+			.compartilhe{
+				position: relative;
+				transition: all .3s;
+				padding: 25px 0 10px 0;
+				cursor: pointer;
+				span{
+					transition: all .3s;
+					position: absolute;
+					transform: translateX(120%);
+					a{
+						text-decoration: none;
+						svg{
+							path{
+								transition: all .2s;
+							}
+						}
+						&:hover{
+							svg{
+								path{
+									transition: all .2s;
+									fill: $rosa-escuro
+								}
+							}
+							.face{
+								path{
+									transition: all .2s;
+									stroke: $rosa-escuro;
+									fill: transparent;
+								}
+							}
+						}
+					}
+				}
+				&:hover{
+					transform: translateX(-100%);
+					transition: all .3s;
+					overflow: unset;
 				}
 			}
 		}
@@ -1295,6 +1334,18 @@ footer {
 					padding: 5px 10px;
 				}
 			}
+			button{
+				background-color: $rosa-escuro;
+				border-radius: 6px;
+				height: 55px;
+				padding: 12px;
+				transition: all .2s;
+				&:hover{
+					transition: all .2s;
+					background-color: #d3a790;
+					border: 1px solid #d3a790;
+				}
+			}
 		}
 		.post-recentes{
 			border-top: 1px solid #eeeeee;
@@ -1308,12 +1359,50 @@ footer {
 						color: $preto;
 						font-size: 20px;
 						font-weight: 500;
+						transition: all .2s;
+					}
+					p{
+						margin-top: 5px;
+						display: flex;
+						align-items: center;
+						font-size: 18px;
+						transition: all .2s;
+					}
+					&:hover{
+						h5{
+							color: $rosa-escuro;
+							transition: all .2s;
+						}
+						p{
+							color: $preto;
+							transition: all .2s;
+						}
 					}
 				}
 				&:nth-child(3){
 					margin: 30px 0;
 				}
 			}
+		}
+		.tags{
+			div{
+				display: flex;
+				flex-wrap: wrap;
+				a{
+					margin: 5px 5px 5px 0;
+					text-decoration: none;
+					color: #A9A9A9;
+					border: 1px solid #A9A9A9;
+					padding: 5px 15px;
+					border-radius: 6px;
+					transition: all .2s;
+					&:hover{
+						transition: all .2s;
+						color: $rosa-escuro;
+						border: 1px solid $rosa-escuro;
+					}
+				}
+			}	
 		}
 	}
 }
